# PCL_Kinect

./: .gitignore  CMakeLists.txt  Makefile  README.md  obstacle.cpp  obstacle.h  obstacleAvoid.cpp  obstacle_node.cpp  pc_background_subtract.cpp  pc_background_subtract.h  segmentation.cpp  things.txt
cfg/: ObstacleAvoid.cfg
include/: Obstacle.h  depth_conversions.h  obstacle_depth_node.h  segmentation.h
obstacle_avoid/: CMakeLists.txt  package.xml
obstacle_avoid/include/: pc_background_subtract.h
obstacle_avoid/launch/: pc_node.launch
obstacle_avoid/src/: Obstacle.cpp  obstacle_pc_node.cpp  pc_background_subtract.cpp
src/: Obstacle.cpp  converter_node.cpp  obstacle_depth_node.cpp  obstacle_pc_node.cpp  segmentation.cpp
src/obstacle_avoid/src/: obstacle_pc_node.cpp
